三种代理模式